--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: ./.github/workflows/python-app
+    - uses: actions/python-app
     - name: pull-request
       uses: repo-sync/pull-request@v2
       with:
